--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",    
-    "typescript": "^4.4.4",
+    "@babel/preset-react": "^7.14.5",
     "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10"
+    "@types/react-dom": "^17.0.10",
+    "eslint": "^8.4.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "parcel ./public/index.html -d build",
