--- a/package.json
+++ b/package.json
@@ -20,13 +20,30 @@
     "@babel/preset-react": "^7.14.5",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^8.4.0",
-    "prettier": "^2.5.1",
+    "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
+    "prettier": "2.5.1",
     "typescript": "^4.4.4"
   },
   "scripts": {
     "start": "parcel ./public/index.html -d build",
     "build": "tsc",
-    "prepare": "npm run-script build"
+    "prepare": "npm run-script build",
+		"lint": "eslint \"./src/**/*.{ts,tsx,js,jsx}\" --ignore-path .eslintignore || true",
+    "lint:fix": "eslint --fix \"./src/**/*.{ts,tsx,js,jsx}\" --ignore-path .eslintignore || true",
+		"prettier": "prettier --write --config ./.prettierrc \"./src/**/*.{ts,tsx,js,jsx}\" || true"
+  },
+	"husky": {
+    "hooks": {}
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": "yarn eslint --ignore-path .eslintignore"
   }
 }
