chore(storybook): storybook 설치 - boiler plate 추가 - test code 추가 ref #2

--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@storybook/addon-actions": "^6.4.8",
+    "@storybook/addon-essentials": "^6.4.8",
+    "@storybook/addon-links": "^6.4.8",
+    "@storybook/react": "^6.4.8",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
+    "babel-loader": "^8.2.3",
     "eslint": "^8.4.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-prettier": "^8.3.0",
@@ -36,11 +41,13 @@
     "start": "parcel ./public/index.html -d build",
     "build": "tsc",
     "prepare": "npm run-script build",
-		"lint": "eslint \"./src/**/*.{ts,tsx,js,jsx}\" --ignore-path .eslintignore || true",
+    "lint": "eslint \"./src/**/*.{ts,tsx,js,jsx}\" --ignore-path .eslintignore || true",
     "lint:fix": "eslint --fix \"./src/**/*.{ts,tsx,js,jsx}\" --ignore-path .eslintignore || true",
-		"prettier": "prettier --write --config ./.prettierrc \"./src/**/*.{ts,tsx,js,jsx}\" || true"
+    "prettier": "prettier --write --config ./.prettierrc \"./src/**/*.{ts,tsx,js,jsx}\" || true",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
-	"husky": {
+  "husky": {
     "hooks": {}
   },
   "lint-staged": {
