--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,13 @@
     "forceConsistentCasingInFileNames": true,         
     "strict": true,  
     "skipLibCheck": true,
-    "declaration": true,
+    
+    /* 
+    storybook test code에서 ts(4082) error 발생하여 지움
+    https://forum.vuejs.org/t/default-export-of-the-module-has-or-is-using-private-name-vueconstructor/19624/4
+    */
+    // "declaration": true,
+    
     "outDir": "./dist",
     "rootDir": "./src"
   },
