chore(storybook): story 추가 - Button, Input 컴포넌트 Story 추가 (stories/components) - 기존 예제 코드 불필요하여 제거   - 예제 코드 에러 고치기 위해 수정한 tsconfig 설정 원복 (declaration) ref #2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,7 @@
     "forceConsistentCasingInFileNames": true,         
     "strict": true,  
     "skipLibCheck": true,
-    
-    /* 
-    storybook test code에서 ts(4082) error 발생하여 지움
-    https://forum.vuejs.org/t/default-export-of-the-module-has-or-is-using-private-name-vueconstructor/19624/4
-    */
-    // "declaration": true,
-    
+    "declaration": true,
     "outDir": "./dist",
     "rootDir": "./src"
   },
