chore(github-actions): release workflow script 추가 - npm package version을 자동으로 업데이트하여 commit 생성 및 push하는 version-patch.yml 추가 - version patch 결과 생성된 [RELEASE]로 시작하는 commit에 대해 npm publish를 수행하는 release-package.yml 추가 close #1

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@nolmungshemung/nmsm-design-system-sample",
-  "version": "0.0.6",
+  "name": "@nolmungshemung/ui-kits",
+  "version": "0.0.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "repository": "https://github.com/nolmungshemung/nmsm-design-system-sample.git",
+  "repository": "https://github.com/nolmungshemung/ui-kits.git",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
   },
-  "author": "akariyan <fntlsltm@gmail.com>",
+  "author": "NMSM <nmsm@dev.com>",
   "license": "MIT",
   "dependencies": {
     "@stitches/react": "^1.2.5",
@@ -39,8 +39,8 @@
   },
   "scripts": {
     "start": "parcel ./public/index.html -d build",
-    "build": "tsc",
-    "prepare": "npm run-script build",
+    "compile": "tsc",
+    "prepare": "npm run-script compile",
     "lint": "eslint \"./src/**/*.{ts,tsx,js,jsx}\" --ignore-path .eslintignore || true",
     "lint:fix": "eslint --fix \"./src/**/*.{ts,tsx,js,jsx}\" --ignore-path .eslintignore || true",
     "prettier": "prettier --write --config ./.prettierrc \"./src/**/*.{ts,tsx,js,jsx}\" || true",
