chore(chromatic): main 브랜치 제외 push trigger로 변경 close #21

--- a/.github/workflows/deploy-storybook.yml
+++ b/.github/workflows/deploy-storybook.yml
@@ -2,10 +2,9 @@
 name: 'Chromatic Deployment'
 
 # Event for the workflow
-on: 
+on:
   push:
-    branches:
-      - main
+    branch-ignore: main
 
 # List of jobs
 jobs:
