--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@storybook/addon-actions": "^6.4.8",
+    "@storybook/addon-docs": "^6.4.9",
     "@storybook/addon-essentials": "^6.4.8",
     "@storybook/addon-links": "^6.4.8",
     "@storybook/react": "^6.4.8",
@@ -36,6 +37,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.1.2",
     "prettier": "2.5.1",
+    "storybook-addon-designs": "^6.2.0",
     "typescript": "^4.4.4"
   },
   "scripts": {
